saves/test/demo_full_20240802_193545/bugs_case/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp bugs_case_tb.v bugs_case.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
bugs_case_tb.v:86: $finish called at 15000 (1ps)

iverilog cmd 2 error:

